# Agentic-AI-Challenge-

./: .env.sample  .gitignore  .prettierignore  GITHUB_ISSUES.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.json
.claude/commands/: bug.md  conditional_docs.md  document.md  feature.md  generate_branch_name.md  install.md  patch.md  prime.md  review.md  start.md  test.md
.claude/commands/e2e/: test_dark_mode.md  test_task_categories.md  test_task_filtering.md  test_task_management.md
adws/: README.md  pyproject.toml
app_docs/: README.md
specs/: issue-1-adw-276d3d2a-sdlc_planner-initial-project-setup.md  issue-1-adw-3714eabe-sdlc_planner-initial-project-setup.md  issue-12-adw-6555d412-sdlc_planner-dark-mode-toggle.md  issue-14-adw-3b5d6b73-sdlc_planner-update-vercel-url.md  issue-5-adw-738bc9db-sdlc_planner-core-task-management.md  issue-7-adw-c293924e-sdlc_planner-task-filtering-capabilities.md  issue-9-adw-0dd8a1ae-sdlc_planner-task-categories.md
src/: App.tsx  index.css
src/components/: CategoryFilter.tsx  TaskFilter.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  ThemeToggle.tsx
src/hooks/: useCategoryFilter.ts  useFilter.ts  useTasks.ts  useTheme.ts
src/types/: index.ts
src/utils/: categories.ts
