[project]
name = "task-manager-adws"
version = "0.1.0"
description = "AI Developer Workflows for Task Manager Challenge"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adw_modules"]
